# LiveMatrix

./: .gitignore  CMakeLists.txt  README.md
LiveMatrix/: CMakeLists.txt
LiveMatrix/include/: RtspPipeline.hpp  StreamController.hpp
LiveMatrix/src/: RtspPipeline.cpp  StreamController.cpp  main.cpp
LiveMatrix/ui/: Main.qml
